samples/_failures_safe/1761689469_905bbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06cfcd56.c: In function ‘main’:
./samples/SAFE/__tmp_06cfcd56.c:171:12: error: missing terminating " character
  171 |     printf("Tokens found: %d
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_06cfcd56.c:171:5: error: expected expression at end of input
  171 |     printf("Tokens found: %d
      |     ^~~~~~
./samples/SAFE/__tmp_06cfcd56.c:171:5: error: expected declaration or statement at end of input
